inventing PDF letter generation utility